--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
         "symfony/yaml": "^4.0",
         "league/json-reference": "^1.0",
         "symfony/property-access": "^4.0",
-        "symfony/property-info": "^4.0"
+        "symfony/property-info": "^4.0",
+        "symfony/console": "^4.0",
+        "league/flysystem": "^1.0"
     },
     "autoload": {
         "psr-4": {
@@ -22,5 +24,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5"
-    }
+    },
+    "scripts": [
+        "bin/oas-to-jsonschema"
+    ]
 }
