--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,14 @@
     ],
     "require": {
         "php": ">=7.1",
-        "symfony/serializer": "^4.0",
-        "symfony/yaml": "^4.0",
+        "league/flysystem": "^1.0",
         "league/json-reference": "^1.0",
+        "league/pipeline": "^0.3.0",
+        "symfony/console": "~3.3 | ^4.0",
         "symfony/property-access": "^4.0",
         "symfony/property-info": "^4.0",
-        "symfony/console": "~3.3 | ^4.0",
-        "league/flysystem": "^1.0"
+        "symfony/serializer": "^4.0",
+        "symfony/yaml": "^4.0"
     },
     "autoload": {
         "psr-4": {
