--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "require": {
         "php": ">=7.1",
         "league/flysystem": "^1.0",
-        "league/json-reference": "^1.0",
+        "league/json-reference": "dev-master",
         "league/pipeline": "^0.3.0",
         "symfony/console": "~3.3 | ^4.0",
         "symfony/property-access": "^4.0",
