Update all the example files
Signed-off-by: Hunter Skrasek <hunterskrasek@me.com>

--- a/example/schemas/Conference.yaml
+++ b/example/schemas/Conference.yaml
@@ -9,6 +9,8 @@ properties:
     type: dateTime
   end_date:
     type: dateTime
+  address:
+    $ref: "Address.yaml"
 required:
   - name
   - start_date
